# crawlerstack-anticaptcha

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: develop.md
src/crawlerstack_anticaptcha/: __init__.py  cmdline.py  db.py  models.py
src/crawlerstack_anticaptcha/alembic/: env.py
src/crawlerstack_anticaptcha/alembic/versions/: 1f9068250d7b_init_db.py  3a0124c1801a_init_db.py  3b5084b205b6_init_table.py  59b628b15944_init_table.py  7d723f3cbb59_init_table.py  8f22b674f29d_init_account_table.py  a81b369eff7d_init_table.py  c728451a6ae7_init_db.py  cb32939bc596_init_db.py  d6501c5fe90d_add_create_date_in_table.py  e306a0df04db_init_table.py  f42e6c63c369_first_create_script.py  fd742a90bc6b_init_table.py
src/crawlerstack_anticaptcha/api/: __init__.py  captcha_api.py  rest_api.py
src/crawlerstack_anticaptcha/captcha/: __init__.py  base.py
src/crawlerstack_anticaptcha/captcha/models/: numerical_captcha.pkl
src/crawlerstack_anticaptcha/captcha/numerical/: __init__.py  captcha.py  model.py  preprocessing.py  train.py
src/crawlerstack_anticaptcha/captcha/slider/: captcha.py  preprocessing.py
src/crawlerstack_anticaptcha/captcha_chacker/: rotate_captcha.py  slider_captcha.py
src/crawlerstack_anticaptcha/config/: __init__.py  settings.yml
src/crawlerstack_anticaptcha/numerical_captcha/: train.py
src/crawlerstack_anticaptcha/processing/: preprocessing.py
src/crawlerstack_anticaptcha/repositories/: base.py  category.py  file.py  models.py  mongo_repository.py  record.py  respositorie.py  respositories.py  storage.py
src/crawlerstack_anticaptcha/services/: __init__.py  archive.py  captcha.py  category.py  cracker.py  handler.py  storage.py  update_record.py
src/crawlerstack_anticaptcha/slider_captcha/: captcha.py  preprocessing.py
src/crawlerstack_anticaptcha/storages/: __init__.py  aws.py  base.py  local.py
src/crawlerstack_anticaptcha/utils/: __init__.py  base_image.py  exception.py  factory.py  log.py  message.py  schema.py  upload_file.py  uploaded_file.py
tests/: __init__.py  conftest.py  settings.yml  test_archive.py  test_captcha.py  test_cmdline.py  test_cracker.py  test_handler.py  test_log.py  test_mongo.py  test_rest_api.py  test_slider_captcha_cracker.py  test_uploaded_file.py  test_version.py
tests/anticaptcha/: test_slider_captcha.py
tests/api/: test_category.py  test_exc_handler.py  test_rest_api.py  test_storages.py
tests/captcha/: test_base.py
tests/captcha/numerical/: test_captcha.py  test_preprocessing.py
tests/captcha/slider/: test_captcha.py
tests/repository/: test_base.py  test_captcha_record.py  test_category.py  test_file_record.py  test_record.py  test_repository.py  test_storage.py
tests/services/: test_captcha.py  test_captcha_service.py  test_category.py  test_factory.py  test_storage.py  test_update_record.py
tests/storages/: test_local.py  test_storage_factory.py
