[tool.poetry]
name = "crawlerstack_anticaptcha"
version = "0.1.0"
description = "anti captcha api service"
authors = ["Terry <17601306065@163.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
python-multipart = "^0.0.5"
dynaconf = "^3.1.9"
pytest = "^7.1.3"
opencv-python = "4.5.5.64"
pymongo = "^4.2.0"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawlerstack_anticaptcha = 'crawlerstack_anticaptcha.cmdline:main'