[tool.poetry]
name = "crawlerstack_anticaptcha"
version = "0.1.0"
description = "anti captcha api service"
authors = ["Terry <17601306065@163.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
python-multipart = "^0.0.5"
dynaconf = "^3.1.9"
pytest = "^7.1.3"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
aiomysql = "^0.1.1"
aiosqlite = "^0.17.0"
alembic = "^1.8.1"
pytest-cov = "^4.0.0"
opencv-python-headless = "4.5.5.64"
scikit-learn = "^1.1.2"
requests = "^2.28.1"
onnxruntime = "^1.12.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
pylint = "^2.15.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawlerstack_anticaptcha = 'crawlerstack_anticaptcha.cmdline:main'

[tool.pylint.main]
ignored-modules = ["cv2", "alembic.context", "alembic.op"]

disable = ["too-few-public-methods", "unused-argument"]

good-names = [
    "pk",
    "i",
    "foo",
    "h",
    "w",
    "f",
    "x",
    "y"
]

max-line-length = 120

ignore = ["versions", 'demo.py']

[tool.pylint.MASTER]
ignore-paths = [
    'src/crawlerstack_anticaptcha/captcha/numerical/__init__.py',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
